<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".presentation.RocketDetailsActivity">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/rocket_details_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/rocket_details_title"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/rocket_details_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rocket_details_heading"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/item_name_heading"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/name_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/rocket_details_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/rocket_details_name"
        app:layout_constraintTop_toTopOf="@id/rocket_details_name"
        tools:text="this is the rocket name" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/images_recycler"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintTop_toBottomOf="@id/rocket_details_name"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        />

    <TextView
        android:id="@+id/rocket_details_active_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/images_recycler"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/rocket_details_active_state"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/rocket_details_active_state_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/rocket_details_active_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/rocket_details_active_status"
        app:layout_constraintTop_toTopOf="@id/rocket_details_active_status"
        tools:text="this is the rocket active status" />

    <TextView
        android:id="@+id/rocket_details_cost_per_launch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rocket_details_active_state_value"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/rocket_details_cost_per_launch"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/rocket_details_cost_per_launch_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/rocket_details_cost_per_launch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/rocket_details_cost_per_launch"
        app:layout_constraintTop_toTopOf="@id/rocket_details_cost_per_launch"
        tools:text="this is the rocket cost per launch" />

    <TextView
        android:id="@+id/rocket_details_success_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rocket_details_cost_per_launch_value"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/rocket_details_success_rate_percentage"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/rocket_details_success_rate_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/rocket_details_success_rate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/rocket_details_success_rate"
        app:layout_constraintTop_toTopOf="@id/rocket_details_success_rate"
        tools:text="this is the rocket success rate" />

    <TextView
        android:id="@+id/rocket_details_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/rocket_details_description_value"
        android:layout_marginStart="10dp"

        android:text="@string/rocket_details_description"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/rocket_details_description_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/rocket_details_description"
        app:layout_constraintTop_toBottomOf="@id/rocket_details_success_rate_value"
        tools:text="this is the rocket success rate" />

    <TextView
        android:id="@+id/rocket_details_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rocket_details_description_value"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/rocket_details_height"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/rocket_details_height_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/rocket_details_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/rocket_details_height"
        app:layout_constraintTop_toTopOf="@id/rocket_details_height"
        tools:text="this is the rocket success rate" />


    <TextView
        android:id="@+id/rocket_details_diameter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rocket_details_height_value"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/rocket_details_diameter"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/rocket_details_diameter_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/rocket_details_diameter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/rocket_details_diameter"
        app:layout_constraintTop_toTopOf="@id/rocket_details_diameter"
        tools:text="this is the rocket success rate" />

    <TextView
        android:id="@+id/rocket_details_wikipedia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rocket_details_diameter_value"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/rocket_details_wikipedia_link"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/rocket_details_wikipedia_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/rocket_details_wikipedia"
        app:layout_constraintTop_toTopOf="@id/rocket_details_wikipedia"
        tools:text="this is the rocket success rate"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>