<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="5dp"
    android:paddingHorizontal="5dp"
    android:paddingVertical="5dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/item_rocket_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_200"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/item_image_holder"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="15dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/common_full_open_on_phone" />

            <TextView
                android:id="@+id/name_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/item_name_heading"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/country_heading"
                app:layout_constraintStart_toEndOf="@id/item_image_holder"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/name_heading"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/name_heading"
                app:layout_constraintTop_toTopOf="@id/name_heading"
                tools:text="this is a very" />

            <TextView
                android:id="@+id/country_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/item_country_heading"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/engine_count_heading"
                app:layout_constraintStart_toEndOf="@id/item_image_holder"
                app:layout_constraintTop_toBottomOf="@+id/name_heading" />

            <TextView
                android:id="@+id/country_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/country_heading"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/country_heading"
                app:layout_constraintTop_toTopOf="@id/country_heading"
                tools:text="this is a very big country value" />


            <TextView
                android:id="@+id/engine_count_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/item_engine_count"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/item_image_holder"
                app:layout_constraintTop_toBottomOf="@+id/country_heading" />

            <TextView
                android:id="@+id/engine_count_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/engine_count_heading"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/engine_count_heading"
                app:layout_constraintTop_toTopOf="@id/engine_count_heading"
                tools:text="this is a very big country value" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>